# assa

./: .dockerignore  .gitignore  LICENSE  docker-compose.yml  openapi.yaml
.github/workflows/: api-docs.yaml  images.yaml
common/: Cargo.toml
common/src/: models.rs
persistence_proxy/: Cargo.toml  Dockerfile
persistence_proxy/migration/src/: m20220101_000001_create_table.rs
persistence_proxy/src/: api.rs  auth.rs  main.rs  model.rs  runner.rs
persistence_proxy/src/db/: consumer.rs  log.rs  mod.rs  prelude.rs
sql_feedback/: Cargo.toml  Dockerfile  main.py  models.py  pyproject.toml  settings.py  utils.py
sql_feedback/src/: main.rs  routes.rs
sql_feedback/templates/: prompt.txt
sql_runner/: .dockerignore  Cargo.toml  Dockerfile
sql_runner/src/: main.rs  routes.rs
sql_runner/src/db/: introspect.rs  mod.rs  types.rs
