[package]
name = "persistence_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
sea-orm = { version = "1.1.7", default-features = false, features = ["sqlx-postgres", "runtime-tokio", "macros", "with-json"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
anyhow = "1.0.97"
utoipa-axum = "0.2.0"
utoipa = "5.3.1"
serde = "1.0.219"
log = "0.4.26"
env_logger = "0.11.7"
envy = "0.4.2"
blake3 = "1.7.0"
serde_json = "1.0.140"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
thiserror = "2.0.12"
futures = "0.3.31"
