[package]
name = "sql_feedback"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
common = { path = "../common" }
env_logger = "0.11.8"
envy = "0.4.2"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
hex = "0.4.3"
askama = "0.14.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
